force-app/main/default/objects/Concorrente__c/Concorrente__c.object-meta.xml
<CustomObject>
    <label>Concorrente</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Número do Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Concorrentes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>