force-app/main/default/objects/Concorrente__c/fields/Configuracao__c.field-meta.xml
<CustomField>
    <fullName>Configuracao__c</fullName>
    <label>Configuração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>