force-app/main/default/objects/Concorrente__c/fields/Descri_o_da_linha__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_da_linha__c</fullName>
    <label>Descrição da linha</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>