force-app/main/default/objects/Concorrente__c/fields/Descri_o_Fonte__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_Fonte__c</fullName>
    <formula>Produto__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição Fonte</label>
    <type>Text</type>
</CustomField>