force-app/main/default/objects/Concorrente__c/fields/Empresa_Concorrente__c.field-meta.xml
<CustomField>
    <fullName>Empresa_Concorrente__c</fullName>
    <label>Empresa Concorrente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Concorrentes</relationshipLabel>
    <relationshipName>Concorrentes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>