force-app/main/default/objects/Concorrente__c/fields/Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Equipamento__c</fullName>
    <label>Equipamento Concorrente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AGITADORES</fullName>
            </value>
            <value>
                <fullName>ANALISADOR HEMATOLOGICO</fullName>
            </value>
            <value>
                <fullName>APARELHO (MONITOR) DE GLICEMIA</fullName>
            </value>
            <value>
                <fullName>APARELHO BIOQUIMICO VET</fullName>
            </value>
            <value>
                <fullName>APARELHO DE ANESTESIA</fullName>
            </value>
            <value>
                <fullName>APARELHO DE ANESTESIA - LINHA VET</fullName>
            </value>
            <value>
                <fullName>ARCO CIRURGICO</fullName>
            </value>
            <value>
                <fullName>ASPIRADOR CIRURGICO</fullName>
            </value>
            <value>
                <fullName>ASPIRADOR DE SECREÇÃO ELÉTRICO MÓVEL</fullName>
            </value>
            <value>
                <fullName>AUTOCLAVE DE ALTA TEMPERATURA</fullName>
            </value>
            <value>
                <fullName>AUTOCLAVE DE BAIXA TEMPERATURA</fullName>
            </value>
            <value>
                <fullName>AUTOCLAVE HORIZONTAL</fullName>
            </value>
            <value>
                <fullName>AUTOCLAVE TABLETOP</fullName>
            </value>
            <value>
                <fullName>BABYPAP</fullName>
            </value>
            <value>
                <fullName>BALANÇA ANTROPOMÉTRICA ADULTO</fullName>
            </value>
            <value>
                <fullName>BALANÇA ANTROPOMÉTRICA INFANTIL</fullName>
            </value>
            <value>
                <fullName>BANHO MARIA</fullName>
            </value>
            <value>
                <fullName>BERCINHO</fullName>
            </value>
            <value>
                <fullName>BERÇO ACRÍLICO</fullName>
            </value>
            <value>
                <fullName>BERÇO AQUECIDO</fullName>
            </value>
            <value>
                <fullName>BILIRRUBINOMETRO</fullName>
            </value>
            <value>
                <fullName>BIPAP</fullName>
            </value>
            <value>
                <fullName>BISTURI ELETRICO</fullName>
            </value>
            <value>
                <fullName>BISTURI ELETRÔNICO</fullName>
            </value>
            <value>
                <fullName>BOMBA DE INFUSÃO DE SERINGA COM ALVO CONTROLE</fullName>
            </value>
            <value>
                <fullName>BOMBA DE INFUSÃO DE SERINGA SEM ALVO CONTROLE</fullName>
            </value>
            <value>
                <fullName>BOMBA DE INFUSÃO VOLUMÉTRICA</fullName>
            </value>
            <value>
                <fullName>BOMBA DE SERINGA - LINHA VET</fullName>
            </value>
            <value>
                <fullName>BRAÇADEIRA PNI ADULTO</fullName>
            </value>
            <value>
                <fullName>BRAÇADEIRA PNI NEONATAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>