force-app/main/default/objects/Concorrente__c/fields/Item_Perdido__c.field-meta.xml
<CustomField>
    <fullName>Item_Perdido__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ítem Perdido</label>
    <type>Checkbox</type>
</CustomField>