force-app/main/default/objects/Concorrente__c/fields/Marca_Concorrente__c.field-meta.xml
<CustomField>
    <fullName>Marca_Concorrente__c</fullName>
    <label>Marca Concorrente</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Equipamento__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1000MEDIC</fullName>
            </value>
            <value>
                <fullName>3RAY</fullName>
            </value>
            <value>
                <fullName>ABOTT</fullName>
            </value>
            <value>
                <fullName>ACON</fullName>
            </value>
            <value>
                <fullName>AFK</fullName>
            </value>
            <value>
                <fullName>AGFA NV</fullName>
            </value>
            <value>
                <fullName>AIR LIQUID</fullName>
            </value>
            <value>
                <fullName>ALFAMED</fullName>
            </value>
            <value>
                <fullName>ALFRS</fullName>
            </value>
            <value>
                <fullName>ALLIAGE</fullName>
            </value>
            <value>
                <fullName>AMOUL</fullName>
            </value>
            <value>
                <fullName>ANCO</fullName>
            </value>
            <value>
                <fullName>AOHUA</fullName>
            </value>
            <value>
                <fullName>APK TECHNOLOGY</fullName>
            </value>
            <value>
                <fullName>ARGUS</fullName>
            </value>
            <value>
                <fullName>ARJO</fullName>
            </value>
            <value>
                <fullName>ARTHIMED</fullName>
            </value>
            <value>
                <fullName>ARTMED</fullName>
            </value>
            <value>
                <fullName>ASPIRAMAX</fullName>
            </value>
            <value>
                <fullName>ASPIRATEX</fullName>
            </value>
            <value>
                <fullName>ASPIRAVIDA</fullName>
            </value>
            <value>
                <fullName>ASSUT</fullName>
            </value>
            <value>
                <fullName>ASTUS</fullName>
            </value>
            <value>
                <fullName>ATRAMAT</fullName>
            </value>
            <value>
                <fullName>BABY BLOCK</fullName>
            </value>
            <value>
                <fullName>BARRFAB</fullName>
            </value>
            <value>
                <fullName>BASALL</fullName>
            </value>
            <value>
                <fullName>BAUMER</fullName>
            </value>
            <value>
                <fullName>BBRAUN</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>