force-app/main/default/objects/Concorrente__c/fields/Marca_Ofertada__c.field-meta.xml
<CustomField>
    <fullName>Marca_Ofertada__c</fullName>
    <label>Marca Ofertada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marcas</valueSetName>
    </valueSet>
</CustomField>