force-app/main/default/objects/Concorrente__c/fields/Modelo_do_Produto__c.field-meta.xml
<CustomField>
    <fullName>Modelo_do_Produto__c</fullName>
    <formula>Produto__r.Modelo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo do Produto</label>
    <type>Text</type>
</CustomField>