force-app/main/default/objects/Concorrente__c/fields/Modelo_Ofertado__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Ofertado__c</fullName>
    <label>Modelo Ofertado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Modelos</valueSetName>
    </valueSet>
</CustomField>