force-app/main/default/objects/Concorrente__c/fields/Nome_do_Fabricante__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Fabricante__c</fullName>
    <formula>TEXT(Produto__r.Marca__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Fabricante</label>
    <type>Text</type>
</CustomField>