force-app/main/default/objects/Concorrente__c/fields/Oportunidade_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_Relacionada__c</fullName>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Concorrentes</relationshipLabel>
    <relationshipName>Concorrentes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>