force-app/main/default/objects/Concorrente__c/fields/Pre_o_de_lista__c.field-meta.xml
<CustomField>
    <fullName>Pre_o_de_lista__c</fullName>
    <label>Preço de lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>