force-app/main/default/objects/Concorrente__c/fields/Pre_o_de_venda__c.field-meta.xml
<CustomField>
    <fullName>Pre_o_de_venda__c</fullName>
    <label>Preço de venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>