force-app/main/default/objects/Concorrente__c/fields/Pre_o_total__c.field-meta.xml
<CustomField>
    <fullName>Pre_o_total__c</fullName>
    <formula>( Subtotal__c ) - ( Subtotal__c *  Desconto__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>