force-app/main/default/objects/Concorrente__c/fields/Valor_M_nimo__c.field-meta.xml
<CustomField>
    <fullName>Valor_M_nimo__c</fullName>
    <label>Valor Mínimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>