force-app/main/default/objects/Concorrente__c/fields/Valor_Total_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Mensal__c</fullName>
    <formula>Quantidade__c *  Valor_Unit_rio_Mensal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Mensal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>