force-app/main/default/objects/Concorrente__c/fields/Valor_Unit_rio_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Valor_Unit_rio_Mensal__c</fullName>
    <label>Valor Unitário Mensal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>