force-app/main/default/objects/Concorrente__c/validationRules/Equipamentos_Divergentes.validationRule-meta.xml
<ValidationRule>
    <fullName>Equipamentos_Divergentes</fullName>
    <active>true</active>
    <errorConditionFormula>IF(TEXT(Equipamento_Ofertado__c) !=  TEXT(Equipamento__c), true, false)</errorConditionFormula>
    <errorMessage>O Equipamento ofertado não pode ser diferente do equipamento concorrente</errorMessage>
</ValidationRule>